gitignore: ignore project/{project,metals.sbt}

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+project/project
+project/metals.sbt
 
 # Scala-IDE specific
 .scala_dependencies
