--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -47,3 +47,21 @@ jobs:
 
     - name: Build scaladoc
       run: sbt unidoc
+
+  fmt-lint:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: 'recursive'
+    - uses: ./.github/actions
+    - name: Fetch dev to be able to check only modified files
+      run: |
+        git fetch --depth=1 origin dev
+        git branch dev origin/dev
+    - name: Setup annotations
+      run: echo "::add-matcher::.github/matcher.json"
+    - name: Check formatting and pass
+      run: bash .github/checkfmt.bash
