ci: add single-commit opt to deploy action

--- a/.github/workflows/push-docs.yml
+++ b/.github/workflows/push-docs.yml
@@ -27,3 +27,4 @@ jobs:
       with:
         folder: target/scala-2.12/unidoc
         target-folder: ${{ github.ref_name }}
+        single-commit: true
