--- a/.github/workflows/push-docs.yml
+++ b/.github/workflows/push-docs.yml
@@ -14,14 +14,10 @@ jobs:
     timeout-minutes: 30
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: 'recursive'
-    - uses: ./.github/actions
-
+    - uses: actions/checkout@v3
+    - uses: ./.github/actions/sbt
     - name: Build scaladoc
       run: sbt clean '++ 2.12.13' unidoc
-
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
